--- a/styles.css
+++ b/styles.css
@@ -67,6 +67,7 @@ header {
 @media only screen and (min-width: 601px) {
     .navbar ul li a {
         font-size: 25px;
+        gap: 30px;
     }
 }
 
