--- a/styles.css
+++ b/styles.css
@@ -145,7 +145,7 @@ h1.topbit {
     5.6977%, 21.6512% { content: "devel"; }
     6.8372%, 20.5116% { content: "develo"; }
     7.9767%, 19.3721% { content: "develop"; }
-    9.1163%, 18.2326% { content: "deelope"; }
+    9.1163%, 18.2326% { content: "develope"; }
     10.2558%, 17.0930% { content: "developer."; }
     30.7674%, 51.2791% { content: ""; }
     31.9070%, 50.1395% { content: "c"; }
