--- a/styles.css
+++ b/styles.css
@@ -69,6 +69,9 @@ header {
         font-size: 25px;
         gap: 30px;
     }
+    .navbar up li a:last-of-child {
+        padding-right: 10px;
+    }
 }
 
 .navbar ul li a::after {
